--- a/kb.github.io/package.json
+++ b/kb.github.io/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "my name here",
+  "name": "kb",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,6 +15,7 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@fluentui/react-components": "^9.51.1",
     "babel-loader": "^9.1.3",
     "next": "14.2.3",
     "react": "^18",
@@ -21,6 +25,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "pnpm": "^9.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   }
