--- a/kb.github.io/.github/workflows/deploy.yml
+++ b/kb.github.io/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: kbinreallife/kbinreallife.github.io
+          publish_dir: // change me to your username/username.github.io
